--- a/arachni.conf
+++ b/arachni.conf
@@ -8,3 +8,9 @@ command=nohup /usr/local/arachni/start.sh &
 user=root
 autostart=true
 autorestart=false
+
+[program:arachni_web]
+command=nohup /usr/local/arachni/bin/arachni_web --host 0.0.0.0 &
+user=root
+autostart=true
+autorestart=false
