fix the web service can't start issue

--- a/arachni.conf
+++ b/arachni.conf
@@ -10,7 +10,7 @@ autostart=true
 autorestart=false
 
 [program:arachni_web]
-command=nohup /usr/local/arachni/bin/arachni_web --host 0.0.0.0 &
+command=nohup /usr/local/arachni/start_web.sh &
 user=root
 autostart=true
 autorestart=false
